--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="alarms_off">Alarmes Inativos</string>
     <string name="edit">Editar</string>
     <string name="turn_off">Desativar</string>
+    <string name="close_app">Fechar aplicativo</string>
+    <string name="allow">Permitir</string>
+    <string name="location_required_message">Este aplicativo utiliza sua localização para saber quando tocar o alarme e, dessa forma, necessita que aceite a permissão de localização</string>
+    <string name="location_required">Necessário aceitar a permissão de localização</string>
+    <string name="location_app_settings_instruction">Por favor, entre em Permissões e permita acesso a seu local</string>
 </resources>
